# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
 
#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/communication/dhcp/dhcp.gni")
 
##############################fuzztest##########################################
ohos_fuzztest("DhcpDhcpdFuzzTest") {
  module_out_path = dhcp_fuzz_output_path
  fuzz_config_file = "$DHCP_ROOT_DIR/test/fuzztest/dhcpdhcpd_fuzzer"
 
  include_dirs = [
    "$DHCP_ROOT_DIR/interfaces/inner_api",
    "$DHCP_ROOT_DIR/interfaces/inner_api/include",
    "$DHCP_ROOT_DIR/services/dhcp_server/include",
    "$DHCP_ROOT_DIR/services/utils/include",
    "$DHCP_ROOT_DIR/test/fuzztest/fuzz_common_func",
    "$DHCP_ROOT_DIR/interfaces/inner_api",
    "$DHCP_ROOT_DIR/frameworks/native/include",
    "$DHCP_ROOT_DIR/frameworks/native/src",
    "$DHCP_ROOT_DIR/frameworks/native/interfaces",
    "$DHCP_ROOT_DIR/test/fuzztest/fuzz_common_func",
    "$DHCP_ROOT_DIR/services",
    "$DHCP_ROOT_DIR/services/utils/include",
    "$DHCP_ROOT_DIR/frameworks/native/include",
  ]
 
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  
  sources = [
    "dhcpdhcpd_fuzzer.cpp",
    "$DHCP_ROOT_DIR/test/fuzztest/fuzz_common_func/mock_dhcp_permission_utils.cpp",
  ]
 
  deps = [
    "$DHCP_ROOT_DIR/services/dhcp_server:dhcp_server_static",
    "$DHCP_ROOT_DIR/services/utils:dhcp_utils",
  ]
 
  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
 
  defines = [
    "DTFUZZ_TEST",
    "private=public",
  ]
 
  subsystem_name = "communication"
  part_name = "dhcp"
}