# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/communication/dhcp/dhcp.gni")

module_output_path = "dhcp/dhcp_util_test"

ohos_unittest("dhcp_util_unittest") {
  module_out_path = module_output_path

  sources = [ "dhcp_common_utils_test.cpp" ]

  include_dirs = [ "$DHCP_ROOT_DIR/services" ]

  deps = [
    "$DHCP_ROOT_DIR/services/utils:dhcp_utils",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  defines = [
    "private = public",
    "protected = public",
  ]

  part_name = "dhcp"
  subsystem_name = "communication"
  testonly = true
}
