# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/communication/dhcp/dhcp.gni")

module_output_path = "dhcp/dhcp/dhcp_util_test"

ohos_unittest("dhcp_util_unittest") {
  module_out_path = module_output_path

  sources = [
    "$DHCP_ROOT_DIR/test/unittest/services/dhcp_client/mock_system_func.cpp",
    "$DHCP_ROOT_DIR/test/unittest/services/dhcp_client/mock_custom_func.cpp",
    "$DHCP_ROOT_DIR/services/dhcp_client/src/dhcp_client_callback_proxy.cpp",
    "$DHCP_ROOT_DIR/services/dhcp_client/src/dhcp_client_death_recipient.cpp",
    "$DHCP_ROOT_DIR/services/dhcp_client/src/dhcp_client_service_impl.cpp",
    "$DHCP_ROOT_DIR/services/dhcp_client/src/dhcp_client_state_machine.cpp",
    "$DHCP_ROOT_DIR/services/dhcp_client/src/dhcp_client_stub.cpp",
    "$DHCP_ROOT_DIR/services/dhcp_client/src/dhcp_function.cpp",
    "$DHCP_ROOT_DIR/services/dhcp_client/src/dhcp_ipv6_client.cpp",
    "$DHCP_ROOT_DIR/services/dhcp_client/src/dhcp_ipv6_dns_repository.cpp",
    "$DHCP_ROOT_DIR/services/dhcp_client/src/dhcp_ipv6_event.cpp",
    "$DHCP_ROOT_DIR/services/dhcp_client/src/dhcp_ipv6_info.cpp",
    "$DHCP_ROOT_DIR/services/dhcp_client/src/dhcp_options.cpp",
    "$DHCP_ROOT_DIR/services/dhcp_client/src/dhcp_result.cpp",
    "$DHCP_ROOT_DIR/services/dhcp_client/src/dhcp_result_store_manager.cpp",
    "$DHCP_ROOT_DIR/services/dhcp_client/src/dhcp_socket.cpp",
    "$DHCP_ROOT_DIR/services/utils/src/dhcp_arp_checker.cpp",
    "$DHCP_ROOT_DIR/services/utils/src/dhcp_common_utils.cpp",
    "$DHCP_ROOT_DIR/services/utils/src/dhcp_system_timer.cpp",
    "dhcp_arp_checker_test.cpp",
    "dhcp_arp_checker_async_test.cpp",
    "dhcp_common_utils_test.cpp",
    "dhcp_permission_utils_test.cpp",
    "dhcp_system_timer_test.cpp",
    "dhcp_thread_test.cpp",
  ]

  include_dirs = [
    "$DHCP_ROOT_DIR/frameworks/native/include",
    "$DHCP_ROOT_DIR/frameworks/native/interfaces",
    "$DHCP_ROOT_DIR/frameworks/native/src",
    "$DHCP_ROOT_DIR/frameworks/native/c_adapter/inc",
    "$DHCP_ROOT_DIR/interfaces",
    "$DHCP_ROOT_DIR/interfaces/inner_api",
    "$DHCP_ROOT_DIR/interfaces/inner_api/include",
    "$DHCP_ROOT_DIR/interfaces/kits/c",
    "$DHCP_ROOT_DIR/services",
    "$DHCP_ROOT_DIR/services/dhcp_client/include",
    "$DHCP_ROOT_DIR/services/dhcp_server/include",
    "$DHCP_ROOT_DIR/services/utils/include",
    "$DHCP_ROOT_DIR/test/unittest/services/dhcp_client",
  ]

  deps = [
    "$DHCP_ROOT_DIR/services/utils:dhcp_utils",
  ]

  ldflags = [
    "-fPIC",
    "-Wl,-E",
    "--coverage",
    "-Wl,-rpath=/vendor/lib64/hw",
    "-Wl,--wrap=sendto",
    "-Wl,--wrap=open",
    "-Wl,--wrap=close",
    "-Wl,--wrap=write",
    "-Wl,--wrap=read",
    "-Wl,--wrap=socket",
    "-Wl,--wrap=setsockopt",
    "-Wl,--wrap=ioctl",
    "-Wl,--wrap=bind",
    "-Wl,--wrap=listen",
    "-Wl,--wrap=connect",
    "-Wl,--wrap=select",
    "-Wl,--wrap=socketpair",
    "-Wl,--wrap=fcntl",
    "-Wl,--wrap=if_nametoindex",
    "-Wl,--wrap=poll",
    "-Wl,--wrap=GetDhcpRawPacket",
    "-Wl,--wrap=GetDhcpKernelPacket",
    "-Wl,--wrap=GetSelectRet",
  ]

  cflags_cc = [ 
    "-Wno-unused-variable",
  ]

  external_deps = [
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
    "netmanager_base:net_native_manager_if",
    "netmanager_base:netsys_controller",
    "openssl:libcrypto_shared",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "time_service:time_client",
  ]

  defines = [
    "DHCP_MOCK_TEST",
    "OHOS_EUPDATER",
    "private = public",
    "protected = public",
    "VENDOR_NAME_PREFIX=\"$VENDOR_NAME\"",
    "DEFAULT_IPV4_DNS_PRI=\"$IPV4_DNS_PRI\"",
    "DEFAULT_IPV4_DNS_SEC=\"$IPV4_DNS_SEC\"",
  ]

  if (defined(global_parts_info) &&
      defined(global_parts_info.resourceschedule_ffrt)) {
    external_deps += [ "ffrt:libffrt" ]
    defines += [ "DHCP_FFRT_ENABLE" ]
  }

  if (defined(global_parts_info) && defined(global_parts_info.startup_init)) {
    external_deps += [ "init:libbegetutil" ]
    defines += [ "INIT_LIB_ENABLE" ]
  }

  part_name = "dhcp"
  subsystem_name = "communication"
  testonly = true
}
